Hmm. Fejl rettet

--- a/Makefile.in
+++ b/Makefile.in
@@ -143,9 +143,9 @@ all:	makefile
 
 ################################################################################
 #
-# all
-# All i alle underkataloger
-all:	makefile
+# html
+# html i alle underkataloger
+html:	makefile
 	@for dir in $(SUBDIRS) $(ALLE) ; do \
 		echo "*** Kører make all i $$dir" && \
 		cd $$dir && make all && cd .. || exit ;\
