--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -259,13 +259,13 @@ $(targetname)-eksempler-$(version).tar.gz : $(eksfiler)
 # distclean-local - hook til automake.
 # Cleaner så det passer til en dist
 distclean-local:	
-	@rm -rf autom4te.cache magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)* palm/*.prc palm/*.pdb sideantal.txt *~ .#*[0-9]
+	rm -rf autom4te.cache magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)* palm/*.prc palm/*.pdb sideantal.txt *~ .#*[0-9]
 
 
 ################################################################################
 clean:
 	@echo clean $(targetshortname)
-	@rm -rf dato.sgml version.sgml linuxbogurl.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)*  palm/*.prc palm/*.pdb sideantal.txt *~*~ .#*[0-9]
+	rm -rf dato.sgml version.sgml linuxbogurl.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)*  palm/*.prc palm/*.pdb sideantal.txt *~*~ .#*[0-9]
 #ifeq ($(lokmake),Makefile_local)
 #	@echo X $(lokmake) X
 #	@make -f Makefile_local clean
